
   Add the Window Divider faces: =window-divider=,
   =window-divider-first-pixel= and =window-divider-last-pixel=.

** ADDED Window divider settings

   Enable =window-divider-mode= and set the
   =window-divider-default-right-width= to ~1~.

** ADDED Some js2-mode faces

   Add the JS2 Mode faces: =js2-error=, =js2-function-call=,
   =js2-object-property=, =js2-warning=.

** CHANGED the color of high-scoring unread mails in gnus

** CHANGED the color of normal ticked mails in gnus

** CHANGED the padding around the mode-line

** CHANGED the JS2 function param face color

   Inherit from =font-lock-warning-face= and don't specify a special
   underline.

** CHANGED the Diff Highlight faces

   Make the foreground and background color on the =diff-hl-change=,
   =diff-hl-add= and =diff-hl-remove= the same.

** CHANGED the top 3 Org heading faces

   Make the =org-level-1=, =org-level-2= and =org-level-3= stand out
   more by giving them and underline, bold weight and italic slant
   respectively.

** REMOVED the 10th rainbow delimiters depth face

* [[https://github.com/ryuslash/yoshi-theme/compare/v6.0.0...v6.1.0][6.1.0]] -- 2015-11-20
  :PROPERTIES:
  :CUSTOM_ID: release-6.1.0
  :END:
** ADDED Some helm faces

   Add the helm faces: =helm-M-x-key=, =helm-buffer-directory=,
   =helm-buffer-file=, =helm-buffer-not-saved=, =helm-buffer-process=,
   =helm-buffer-size=, =helm-match=, =helm-selection=, =helm-source-header=,
   =helm-ff-directory=, =helm-ff-dotted-directory=, =helm-ff-executable=,
   =helm-ff-file=, =helm-ff-invalid-symlink=, =helm-ff-symlink=.

** ADDED Some circe faces

   Add the circe faces: =circe-highlight-nick-face= and
   =circe-server-face=.

** ADDED Some lui faces

   Add the lui faces: =lui-button-face=, =lui-time-stamp-face=.

** ADDED CSS faces

   Add the CSS faces: =css-property=, =css-selector= and
   =css-proprietary-property=.

** ADDED =magit-section-highlight= face

** ADDED =highlight-numbers-number= face
